# Galaxy_simulation

./: .gitignore  .gitmodules  Block.cpp  Block.h  CMakeLists.txt  Main.cpp  README.md  Star.cpp  Star.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h  parameters.json
include/: Block.h  Draw.h  Draw_OGL.h  Star.h  Utils.h  mymemory.hpp
res/: shader.frag  shader.geom  shader.vert
src/: Block.cpp  Draw_OGL.cpp  Star.cpp  Utils.cpp  main.cpp
